# pf-localization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cameraParams.mat  ggt.m  grn.m  main.m  p2c.cu  p2c.h  pf.cu  pf.cuh
helpers/: createDetectorParams.m  nativeUpdateWeightsCpu.m  nativeUpdateWeightsGpu.m  plotSystem.m
